--- a/operator/process-business-rules-springboot.yaml
+++ b/operator/process-business-rules-springboot.yaml
@@ -10,8 +10,8 @@ spec:
   #- name: MY_CUSTOM_ENV
   #  value: "my value"
   gitSource:
-    contextDir: kogito-quarkus-examples/process-business-rules-springboot
-    uri: 'https://github.com/kiegroup/kogito-examples'
+    contextDir: 
+    uri: 'https://github.com/sachinchauhan923/kogito_example'
   # set your maven nexus repository to speed up the build time
   #mavenMirrorURL:
 ---
